bug/DNN-7738 - Reverted CSS changes, added custom knockout binding handler for truncated text and added the tooltip functionality.

--- a/DNN Platform/Modules/Dnn.Modules.DynamicContentManager/module.css
+++ b/DNN Platform/Modules/Dnn.Modules.DynamicContentManager/module.css
@@ -90,8 +90,6 @@ input[type="password"] {
   width: 100%;
   border-collapse: collapse;
   border-bottom: 1px solid #aaa;
-  table-layout: fixed;
-  word-wrap: break-word;
 }
 .dccContainer .dccTable tr:nth-child(2n) {
   background: #eee;
